--- a/Proyecto1/Proyecto1/Shared/MenuNav.razor
+++ b/Proyecto1/Proyecto1/Shared/MenuNav.razor
@@ -13,18 +13,18 @@
             </NavLink>
         </li>
 
-      <li class="nav-item">
+    @*     <li class="nav-item">
+     <li class="nav-item">
               <NavLink  href="counter">
                  <i class="fa-regular fa-address-card"></i> Counter
             </NavLink>
         </li>
-        <li class="nav-item">
               <NavLink  href="fetchdata">
                  <i class="fa-regular fa-address-card"></i> Fetch data
             </NavLink>
         </li>
 
-@*        <li>
+        <li>
             <a href="#pageSubmenu" data-bs-toggle="collapse" aria-expanded="false">
                 <i class="fa-regular fa-address-card"></i>
                 Paginas
